<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ly"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoGastoActivity">

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_nombre_gasto" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nombre_gasto"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tv_precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_precio" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_precio"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/tv_moneda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/moneda" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_comprador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_comprador" />

    <Spinner
        android:id="@+id/sp_comprador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_consumidores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_consumidores" />

    <ListView
        android:id="@+id/lv_consumidores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>